--- a/my_project/recipe/templates/familles/famille_form.html
+++ b/my_project/recipe/templates/familles/famille_form.html
@@ -3,6 +3,13 @@
 <!-- -->
 {% load crispy_forms_tags %}
 <!-- -->
+
+{%block back%} 
+{%url "recipe-home" %}
+{%endblock back%}
+
+
+
 {% block content %}
 <div class="container">
   <form method="POST">
@@ -16,7 +23,7 @@
     </div>
   </form>
   <div class="border-top pt-3">
-    <a class="text-muted" href="{% url 'ingredients-recipe' %}">cancel</a>
+    <a class="text-muted" href="{% url 'familles-recipe' %}">cancel</a>
   </div>
 </div>
 
