--- a/my_project/recipe/templates/familles/familles.html
+++ b/my_project/recipe/templates/familles/familles.html
@@ -1,37 +1,84 @@
 {% extends 'recipe/base.html' %}
 
+{%block back%} 
+{%url "recipe-home" %}
+{%endblock back%}
+
+
+
 
     {% block content %}
-    <h1> Mes Familles d'ingrédients </h1>
-    <div class="container">
+    <h1> Les familles </h1>
+
+    <form action="" method="post">
+
+        Barre de Recherche : 
+        {% csrf_token %}
+
+
+        <div>
+            <input class="form-control" list ="famille_list" type="text" id='search_item' placeholder='chercher famille' aria-label='search' name='search' style='width:40%; display: inline-block'>
+            <input class="btn-secondary" id="search_button" type="submit" name="search_button" value="Chercher" style="display: inline-block">
+            <datalist id="famille_list">
+
+            {% for famille in familles_list %}
+            <option value="{{famille.name}}"> </option>
+            {% endfor %}
+            </datalist>    
+
+        </div>
+        <br>
+        
+
+    </form>
+    
+    <div class="table-responsive-sm">
                 
 
 
-                <table class="table">
+                <table class="table table-striped table-secondary">
                     <thead>
                         <tr>
-                            <th scope="col"> Familles</th>
+                            <th scope="col"> Ingrédient </th>
                             <th scope="col"> modifier </th>
-                            <th scope="col"> dupliquer </th>
-                            <th scope="col"> supprimer </th>
+                            <th scope="col"> voir détails </th>
+                            <th scope="col"> supprimer</th>
+                            <th scope="col"> dupliquer</th>
 
                         </tr>
             
                     </thead>
 
+
                     <tbody>     
-    {% for famille in familles_app %}        
-                        <tr>
-                            <td> {{famille.name}} </td>     
-   
-                            <td> modifier </td>   
-                            <td> duppliquer </td>
+    {% for famille in familles %}        
+    <tr>
+                <td> {{famille.name}} </td>     
 
-                            <td> supprimer </td>  
+                <td> <a class="btn btn-outline-info" href="{% url 'familles-update' famille.id %}">Modifier</a></td>   
+                <td> <a class="btn btn-outline-info" href="{% url 'famille-ingredients' famille.id %}">voir details</a></td>   
+                <td> <a class="btn btn-outline-danger" href="{% url 'familles-delete' famille.id %}">Supprimer</a>  </td>
 
-   
-                        </tr>
 
+                <td>                                 
+                    <form action="" method="post">
+
+                        {% csrf_token %}
+
+
+                        <div style='visibility:hidden; height:0'>
+                            <select id="famille_id" name="id">
+                                <option value="{{ famille.id}}">{{ famille.name }}</option>
+                            </select>    
+                        </div>
+
+                        
+                        <input class="btn" id="submit_button" type="submit" name="submit_id" value="Dupliquer">
+                    </form>
+        </td>  
+
+
+    </tr>
         <!--
         <div class="card" style="width: 18rem;">
   
@@ -49,7 +96,7 @@
 
    
 
-
+    <div class="table-responsive-sm">
 
 
 
