--- a/my_project/recipe/templates/ingredients/ingredient_form.html
+++ b/my_project/recipe/templates/ingredients/ingredient_form.html
@@ -3,12 +3,17 @@
 <!-- -->
 {% load crispy_forms_tags %}
 <!-- -->
+
+{%block back%} 
+{%url "recipe-home" %}
+{%endblock back%}
+
 {% block content %}
 <div class="container">
   <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Créer recette</legend>
+      <legend class="border-bottom mb-4">Créer ingrédient</legend>
       {{ form|crispy }}
     </fieldset>
     <div class="form-group py-3">
