--- a/my_project/recipe/templates/recipe/base.html
+++ b/my_project/recipe/templates/recipe/base.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% if title %}
-    <title>Django Recipes - {{title}}</title>
+    <title>ORI</title>
     {% else %}
-    <title>Django Recipes</title>
+    <title>ORI</title>
     {% endif %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,7 +20,8 @@
 
     <style>
       body{
-        background-color: rgba(239, 127, 0, 0.774)
+        background-color: rgba(239, 127, 0, 0.774);
+
       }
     </style>
   </head>
@@ -28,8 +29,14 @@
 
     <nav class="navbar navbar-expand-lg bg-light">
         <img src="{% static '/images/LOGO_ORI.png' %}"  width="50" height="50">
+
+       
+        <div class="navbar-nav" style = 'margin-left: 5%;'>
+             <a class="btn btn-outline-info" href={%block back%} {%endblock back%}> retour </a> 
+        </div>
+
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'recipe-home'%}">ORI</a>
+
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,9 +51,7 @@
           </div>
           <div class="navbar-nav">
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'user-profile' %}"
-              >My Profile</a
-            >
+
             <a class="nav-item nav-link" href="{% url 'user-logout' %}">Logout</a>
             {% else %}
             <a class="nav-item nav-link" href="{% url 'user-login' %}">Login</a>
