--- a/my_project/recipe/templates/recipe/base3.html
+++ b/my_project/recipe/templates/recipe/base3.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% if title %}
-    <title>Django Recipes - {{title}}</title>
+    <title>ORI - {{title}}</title>
     {% else %}
-    <title>Django Recipes</title>
+    <title> ORI </title>
     {% endif %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@
 
     <style>
       body{
-        background-color: rgba(255, 255, 255, 0.815)
+        background-color: rgba(255, 255, 255, 0.815);
       }
 
       div.logo{
@@ -34,7 +34,10 @@
 
 
     <nav class="navbar navbar-expand-lg bg-light">
-        <img src="{% static '/images/LOGO_ORI.png' %}"  width="5%" height="5%" >
+      <img src="{% static '/images/LOGO_ORI.png' %}"  width="50" height="50">
+
+
+
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,9 +53,7 @@
           </div>
           <div class="navbar-nav">
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'user-profile' %}"
-              >My Profile</a
-            >
+
             <a class="nav-item nav-link" href="{% url 'user-logout' %}">Logout</a>
             {% else %}
             <a class="nav-item nav-link" href="{% url 'user-login' %}">Login</a>
