--- a/my_project/recipe/templates/recipe/create_recipe.html
+++ b/my_project/recipe/templates/recipe/create_recipe.html
@@ -1,4 +1,11 @@
-{% extends 'Recipe/base.html' %}
+{% extends 'recipe/base.html' %}
+
+{%block back%} 
+{%url "recipe-home" %}
+{%endblock back%}
+
+
+
 {% block content%}
 {%load crispy_forms_tags%}
 
@@ -26,14 +33,8 @@
 
 -->
 
-<style>
-    .hidden {
-        display: none;
-    }
-</style>
 
-
-
+<h3> Ajouter les ingrédients :</h3>
 
 <form id="pet_form"  action="."  method="post" enctype="multipart/form-data">
 
@@ -41,24 +42,54 @@
 
     {{ form|crispy }}
 
+
 </br>
 </br>
 </br>
     {{ formset.management_form }}
     {% for form in formset %}
     <div class="image-form d-flex justify-content-between"  id="recipeForm" data-formes-url="{% url 'ajax_load_forme' %}"  data-ingredients-url="{% url 'ajax_load_ingredient' %}"  >
-        {{ form.famille}}
-        {{ form.forme}}
-        {{ form.ingredient}}
-        {{ form.quantity}}
-<!--         {{ form.as_p }} -->
-        <button class="align-self-center btn btn-danger delete-image-form">supprimer</button>
-    </div>
-    {% endfor %}
-<!--
-    <div id="empty-form" class="">{{ formset.empty_form.famille}}</div>-->
+            
+        <div class = "row">
+            <br>
+            <br>
 
-    <input type="submit" class="btn btn-primary my-3"  value="Passer au processus de preparation" name='terminerBttn'/>  </button>
+            <div class = " col-sm">
+                Famille :
+                {{ form.famille}}
+            </div>
+
+            <div class = " col-sm">
+                Ingrédient :
+                {{ form.forme}}
+            </div>  
+
+            <div class = " col-sm">
+                Forme :
+                {{ form.ingredient}}
+            </div>  
+
+            <div class = " col-sm">
+                Quantité (g):
+                {{ form.quantity}}
+            </div>  
+
+
+                {{form.DELETE}}
+
+            <div class = " col-sm">
+                <br>
+                <button class="align-self-center btn btn-danger delete-image-form">supprimer</button>
+            </div>
+
+        </div>
+
+    </div>    
+
+    {% endfor %}
+
+
+    <input type="submit" value="Passer au processus de preparation" name='terminerBttn'/>  </button>
     <button id="add-image-form" class="btn btn-primary my-3">ajouter un nouvel ingrédient</button>
     <input type="hidden" name="counter_newid" value="3" id="id_counter_new_id">
 </form>
@@ -76,11 +107,7 @@ const addImageFormBtn = document.querySelector("#add-image-form");
 const submitFormBtn = document.querySelector('[type="submit"]');
 const totalForms = document.getElementById("id_ingredients_recipe-TOTAL_FORMS");
 
-
 const counterID = document.getElementById("id_counter_new_id");
-
-
-
 
 function updateForms() {
     let formCount = imageForm.length ;
@@ -94,28 +121,42 @@ function updateForms() {
 addImageFormBtn.addEventListener("click", function (event) {
     event.preventDefault();
     //let formCount = imageForm.length ;
-    const count = imageForm.length
-    const formCount = parseInt(counterID.getAttribute('value')) + 1 ;
-    const newImageForm = imageForm[0].cloneNode(true);
-    //const newImageForm = document.getElementById('empty-form').cloneNode(true);
+    const formCount = imageForm.length
+    //const formCount = parseInt(counterID.getAttribute('value')) + 1 ;
+    var newImageForm = imageForm[0].cloneNode(true);
     const formRegex = RegExp(`ingredients_recipe-(\\d){1}-`, 'g');
 
     newImageForm.innerHTML = newImageForm.innerHTML.replace(formRegex, `ingredients_recipe-${formCount}-`);
-    mainForm.insertBefore(newImageForm, submitFormBtn);
-    totalForms.setAttribute('value', 10);
-    counterID.setAttribute('value', formCount);
 
-    get_ingredients()
+        
+    newImageForm.style.visibility = 'visible';
+    newImageForm.style.height='100%';
+
+    mainForm.insertBefore(newImageForm, submitFormBtn);
+    totalForms.setAttribute('value', formCount + 1);
+
+    //counterID.setAttribute('value', formCount + 1);
+
+    get_ingredients();
 });
 
 mainForm.addEventListener("click", function (event) {
     let formCount = imageForm.length ;
     if (event.target.classList.contains("delete-image-form")) {
         event.preventDefault();
-        event.target.parentElement.remove();
+        const deleteRegex = RegExp(`id_ingredients_recipe-(\\d){1}-DELETE-`, 'g');
+        event.target.parentElement.parentElement.parentElement.querySelectorAll('[id$="-DELETE"]')[0].checked = true;
+        //console.log(event.target.parentElement.querySelectorAll('[id$="-DELETE"]')[0].checked)
+        //console.log(document.querySelectorAll('[id$="-DELETE"]'))
+        console.log('Test')
+        
+        //event.target.parentElement.remove();
+        event.target.parentElement.parentElement.parentElement.style.visibility = 'hidden';
+        event.target.parentElement.parentElement.parentElement.style.height=0;
+        // show - use this for inline elements (span, a)
         //formCount--;
         //updateForms();
-        //totalForms.setAttribute('value', 100);
+        //totalForms.setAttribute('value', 5);
     }
 });
 </script>
@@ -159,20 +200,25 @@ mainForm.addEventListener("click", function (event) {
     }
 </script>
 -->
-<script> 
-for (let i = 0; i < imageForm.length; i++) {
-    console.log( i + imageForm[1].id)
-}
-</script>
 
+<script>
+    var del = document.querySelectorAll('[id$="-DELETE"]')
+
+    for (let i=0; i < del.length; i++ ) {
+        console.log(del[i]);
+        del[i].style.visibility = 'hidden';
+    }
+        
+</script>
 
 <script>
  
     //for (let i = 0; i < imageForm.length; i++) {
     const id_count = $("id_counter_new_id")
+    
     function get_ingredients() {
 
-        for (let i = 0; i < 100; i++) { 
+        for (let i = 0; i < 10; i++) { 
             //console.log(i)
         const formRegex1 = '#' + 'id_ingredients_recipe-'+ i + '-famille'
         const formRegex2 = '#' + 'id_ingredients_recipe-' + i + '-forme'
@@ -212,13 +258,13 @@ for (let i = 0; i < imageForm.length; i++) {
 
 
 
-        for (let i = 0; i < 100; i++) {
+        for (let i = 0; i < 10; i++) {
             console.log(i)
             const formRegex1 = '#' + 'id_ingredients_recipe-'+ i + '-forme'
             const formRegex2 = '#' + 'id_ingredients_recipe-' + i + '-ingredient'
             const id1 = $(formRegex1)
             const id2 = $(formRegex2)
-            id1.click(function () {
+            id1.change(function () {
                 console.log("Test Change ingredient");
                 const url = $("#recipeForm").attr("data-ingredients-url");  // get the url of the `load_cities` view
                 const formeId = $(this).val();  // get the selected country ID from the HTML input
