--- a/my_project/recipe/templates/recipe/recettes.html
+++ b/my_project/recipe/templates/recipe/recettes.html
@@ -3,14 +3,40 @@
 {%load static%}
 
 
+{%block back%} 
+{%url "recipe-home" %}
+{%endblock back%}
+
+
 
     {% block content %}
 
     {% if recipe.author.is_staff %}
     <h1> Mes recettes </h1>
+    <form action="" method="post">
+
+        Barre de Recherche : 
+        {% csrf_token %}
 
 
-    <table class="table">
+        <div>
+            <input class="form-control" list ="recipe_list" type="text" id='search_item' placeholder='chercher recettes' aria-label='search' name='search' style='width:40%; display: inline-block'>
+            <input class="btn-secondary" id="search_button" type="submit" name="search_button" value="Chercher" style="display: inline-block">
+            <datalist id="recipe_list">
+
+            {% for recipe in recipes_list %}
+            <option value="{{recipe.title}}"> </option>
+            {% endfor %}
+            </datalist>    
+
+        </div>
+        <br>
+        
+
+    </form>
+
+
+    <table class="table table-striped table-secondary">
         <thead>
             <tr>
                 <th scope="col"> nom de la recette</th>
@@ -27,8 +53,6 @@
 
             {% for recipe in recipes%}
 
-
-            {% if recipe.author.is_staff %}
             
             <tr>
                 <th scope="col"><a href={% url 'recettes-detail' recipe.pk%} class="card-link">{{recipe.title}}</a> </th>   
@@ -60,7 +84,20 @@
 
 
     {%else%}
-    <h1> Mes recettes </h1>
+    <h1> Toutes les recettes </h1>
+
+    
+    <div>
+        <input class="form-control" list ="recipe_list" type="text" id='search_item' placeholder='search' aria-label='search' name='search' style='width:40%; display: inline-block'>
+        <input class="btn-secondary" id="search_button" type="submit" name="search_button" value="Chercher" style="display: inline-block">
+        <datalist id="recipe_list">
+
+        {% for recipe in recipes_list %}
+        <option value="{{recipe.title}}"> </option>
+        {% endfor %}
+        </datalist>    
+
+    </div>
 
 
     <table class="table">
@@ -72,7 +109,7 @@
                 <th scope="col"> telecharger  </th>
                 <th scope="col"> supprimer </th>
                 <th scope="col"> date création </th>
-                <th scope="col"> date modif </th>
+                <th scope="col"> date de modification </th>
             </tr>
 
         </thead>
@@ -88,8 +125,8 @@
                 <td> dupliquer </td>
                 <td><a class="btn" href="{% url 'pdf_recipe' pk=recipe.id %}"> Télécharger </a></td>
                 <td><a class="btn" href="{% url 'recettes-delete' recipe.id %}"> Supprimer </a></td>
-                <td> {{recipe.title}} </td>
-                <td> {{recipe.title}} </td>
+                <td> {{recipe.created}} </td>
+                <td> {{recipe.updated}} </td>
 
                 <!--
     <div class="card" style="width: 18rem;">
