--- a/my_project/recipe/templates/recipe/recettes_admin.html
+++ b/my_project/recipe/templates/recipe/recettes_admin.html
@@ -2,11 +2,38 @@
 
 {%load static%}
 
+
+{%block back%} 
+{%url "recipe-home" %}
+{%endblock back%}
+
+
     {% block content %}
 
 
     <h1> Mes recettes </h1>
 
+    <form action="" method="post">
+
+        Barre de Recherche : 
+        {% csrf_token %}
+
+
+        <div>
+            <input class="form-control" list ="recipe_list" type="text" id='search_item' placeholder='chercher recettes' aria-label='search' name='search' style='width:40%; display: inline-block'>
+            <input class="btn-secondary" id="search_button" type="submit" name="search_button" value="Chercher" style="display: inline-block">
+            <datalist id="recipe_list">
+
+            {% for recipe in recipes_list %}
+            <option value="{{recipe.title}}"> </option>
+            {% endfor %}
+            </datalist>    
+
+        </div>
+        <br>
+        
+
+    </form>
 
     <table class="table table-striped table-secondary">
         <thead>
@@ -25,15 +52,35 @@
 
             {% for recipe in recipes%}
 
-            {% if recipe.author.is_staff %}             
+            {% if recipe.author == user %}             
             <tr>
                 <th scope="col"><a href={% url 'recettes-detail' recipe.pk%} class="card-link">{{recipe.title}}</a> </th>   
                 <td> <a class="btn" href="{% url 'recettes-update' recipe.id %}"> Modifer </a> </td>
-                <td> dupliquer </td>
+                <td> 
+                    
+                    <form action="" method="post">
+
+                        {% csrf_token %}
+
+
+                        <div style='visibility:hidden; height:0'>
+                            <select id="recipe_id" name="id">
+                                <option value="{{ recipe.id}}">{{ recipe.title }}</option>
+                            </select>    
+                        </div>
+
+                        
+                        <input class="btn" id="submit_button" type="submit" name="submit_id" value="Dupliquer">
+                    </form>
+                </td>
+
                 <td><a class="btn" href="{% url 'pdf_recipe' pk=recipe.id %}"> Télécharger </a></td>
                 <td><a class="btn" href="{% url 'recettes-delete' recipe.id %}"> Supprimer </a></td>
-                <td> {{recipe.title}} </td>
-                <td> {{recipe.title}} </td>
+
+
+                <td> {{recipe.created}} </td>
+                <td> {{recipe.updated}} </td>
+ 
 
                 <!--
     <div class="card" style="width: 18rem;">
