--- a/my_project/recipe/templates/recipe/update_recipe.html
+++ b/my_project/recipe/templates/recipe/update_recipe.html
@@ -1,4 +1,9 @@
-{% extends 'Recipe/base.html' %}
+{% extends 'recipe/base.html' %}
+
+{%block back%} 
+{%url "recettes-recipe" %}
+{%endblock back%}
+
 {% block content%}
 {%load crispy_forms_tags%}
 
@@ -27,13 +32,16 @@
 -->
 
 
-
+<h3> Ajouter les ingrédients :</h3>
 
 <form id="pet_form"  action="{% url 'recettes-update' pk %}"  method="post" enctype="multipart/form-data">
 
     {% csrf_token %}
 
     {{ form|crispy }}
+    {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+    {% endfor %}
 
 </br>
 </br>
@@ -41,13 +49,45 @@
     {{ formset.management_form }}
     {% for form in formset %}
     <div class="image-form d-flex justify-content-between"  id="recipeForm" data-formes-url="{% url 'ajax_load_forme' %}"  data-ingredients-url="{% url 'ajax_load_ingredient' %}"  >
-        {{ form.famille}}
-        {{ form.forme}}
-        {{ form.ingredient}}
-        {{ form.quantity}}
-<!--         {{ form.as_p }} -->
-        <button class="align-self-center btn btn-danger delete-image-form">supprimer</button>
-    </div>
+            
+        <div class = "row">
+
+
+            <div class = " col-sm">
+                Famille :
+                {{ form.famille}}
+            </div>
+
+            <div class = " col-sm">
+                Ingrédient :
+                {{ form.forme}}
+            </div>  
+
+            <div class = " col-sm">
+                Forme :
+                {{ form.ingredient}}
+            </div>  
+
+            <div class = " col-sm">
+                Quantité (g):
+                {{ form.quantity}}
+            </div>  
+
+
+                {{form.DELETE}}
+
+            <div class = " col-sm">
+                <br>
+                <button class="align-self-center btn btn-danger delete-image-form">supprimer</button>
+            </div>
+
+        </div>
+
+
+    </div>    
+    {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+    {% endfor %}
     {% endfor %}
 
 
@@ -83,15 +123,15 @@ function updateForms() {
 addImageFormBtn.addEventListener("click", function (event) {
     event.preventDefault();
     //let formCount = imageForm.length ;
-    const count = imageForm.length
-    const formCount = parseInt(counterID.getAttribute('value')) + 1 ;
+    const formCount = imageForm.length
+    //const formCount = parseInt(counterID.getAttribute('value')) + 1 ;
     const newImageForm = imageForm[0].cloneNode(true);
     const formRegex = RegExp(`ingredients_recipe-(\\d){1}-`, 'g');
 
     newImageForm.innerHTML = newImageForm.innerHTML.replace(formRegex, `ingredients_recipe-${formCount}-`);
     mainForm.insertBefore(newImageForm, submitFormBtn);
-    totalForms.setAttribute('value', 100);
-    counterID.setAttribute('value', formCount);
+    totalForms.setAttribute('value', formCount + 1);
+    //counterID.setAttribute('value', formCount + 1);
 
     get_ingredients()
 });
@@ -100,10 +140,19 @@ mainForm.addEventListener("click", function (event) {
     let formCount = imageForm.length ;
     if (event.target.classList.contains("delete-image-form")) {
         event.preventDefault();
-        event.target.parentElement.remove();
+        const deleteRegex = RegExp(`id_ingredients_recipe-(\\d){1}-DELETE-`, 'g');
+        event.target.parentElement.parentElement.parentElement.querySelectorAll('[id$="-DELETE"]')[0].checked = true;
+        //console.log(event.target.parentElement.querySelectorAll('[id$="-DELETE"]')[0].checked)
+        //console.log(document.querySelectorAll('[id$="-DELETE"]'))
+        console.log('Test')
+        
+        //event.target.parentElement.remove();
+        event.target.parentElement.parentElement.parentElement.style.visibility = 'hidden';
+        event.target.parentElement.parentElement.parentElement.style.height=0;
+        // show - use this for inline elements (span, a)
         //formCount--;
         //updateForms();
-        totalForms.setAttribute('value', 100);
+        //totalForms.setAttribute('value', 5);
     }
 });
 </script>
@@ -147,17 +196,22 @@ mainForm.addEventListener("click", function (event) {
     }
 </script>
 -->
-<script> 
-for (let i = 0; i < imageForm.length; i++) {
-    console.log( i + imageForm[1].id)
-}
-</script>
 
+<script>
+    var del = document.querySelectorAll('[id$="-DELETE"]')
+
+    for (let i=0; i < del.length; i++ ) {
+        console.log(del[i]);
+        del[i].style.visibility = 'hidden';
+    }
+        
+</script>
 
 <script>
  
     //for (let i = 0; i < imageForm.length; i++) {
     const id_count = $("id_counter_new_id")
+    
     function get_ingredients() {
 
         for (let i = 0; i < 10; i++) { 
