--- a/my_project/recipe/templates/recipe/base2.html
+++ b/my_project/recipe/templates/recipe/base2.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% if title %}
-    <title>Django Recipes - {{title}}</title>
+    <title>ORI </title>
     {% else %}
-    <title>Django Recipes</title>
+    <title>ORI</title>
     {% endif %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,8 @@
 
     <style>
       body{
-        background-color: rgba(95, 146, 48, 0.815)
+        background-color: rgba(95, 146, 48, 1);
+        background-image : url('{% static '/images/fd_couleur.png' %}');
       }
 
       div.logo{
@@ -34,25 +35,30 @@
 
 
     <nav class="navbar navbar-expand-lg bg-light">
-        <img src="{% static '/images/LOGO_ORI.png' %}"  width="5%" height="5%" >
+
+
+        <img src="{% static '/images/LOGO_ORI.png' %}"  width="50" height="50">
+
+
+        <div class="navbar-nav" style = 'margin-left: 5%;'>
+          <a class="btn btn-outline-info" href={%block back%} {%endblock back%}> retour </a> 
+        </div>
+  
+
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{% url 'recipe-home'%}">Home</a>
-              </li>
+
 
               
             </ul>
           </div>
           <div class="navbar-nav">
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'user-profile' %}"
-              >My Profile</a
-            >
+
             <a class="nav-item nav-link" href="{% url 'user-logout' %}">Logout</a>
             {% else %}
             <a class="nav-item nav-link" href="{% url 'user-login' %}">Login</a>
@@ -67,6 +73,8 @@
 
 
     <div class = "container mt-4 col-10">
+
+
         {% if messages %} 
           {% for message in messages %}
             <div class="alert alert-{{message.tags}}"> {{message}}</div>
