--- a/my_project/recipe/templates/recipe/base3.html
+++ b/my_project/recipe/templates/recipe/base3.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% if title %}
-    <title>Django Recipes - {{title}}</title>
+    <title>ORI </title>
     {% else %}
-    <title>Django Recipes</title>
+    <title> ORI </title>
     {% endif %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,8 +21,12 @@
 
     <style>
       body{
-        background-color: rgba(255, 255, 255, 0.815)
+        background-color: rgba(255, 255, 255, 0.815);
+
       }
+
+
+
 
       div.logo{
             padding : 500 px
@@ -30,11 +34,20 @@
     </style>
 
   </head>
+
+
   <body>
 
-
     <nav class="navbar navbar-expand-lg bg-light">
-        <img src="{% static '/images/LOGO_ORI.png' %}"  width="5%" height="5%" >
+      <img src="{% static '/images/LOGO_ORI.png' %}"  width="50" height="50">
+
+
+      <div class="navbar-nav" style = 'margin-left: 5%;'>
+        <a class="btn btn-outline-info" href={%block back%} {%endblock back%}> retour </a> 
+      </div>
+
+
+
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,9 +63,7 @@
           </div>
           <div class="navbar-nav">
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'user-profile' %}"
-              >My Profile</a
-            >
+
             <a class="nav-item nav-link" href="{% url 'user-logout' %}">Logout</a>
             {% else %}
             <a class="nav-item nav-link" href="{% url 'user-login' %}">Login</a>
@@ -73,8 +84,11 @@
           {%endfor%}
         {% endif %}
 
-        {% block content %}
-        {% endblock content%}
+
+
+          {% block content %}
+          {% endblock content%}
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" 
@@ -86,4 +100,6 @@
     integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" 
     crossorigin="anonymous"></script>
   </body>
+
+  
 </html>
