--- a/my_project/recipe/templates/recipe/base2.html
+++ b/my_project/recipe/templates/recipe/base2.html
@@ -17,9 +17,19 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
     crossorigin="anonymous">
 
+
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <style>
+
+
+      h1 {
+        font-family: 'Source Sans Pro', sans-serif;
+      }
+
+
       body{
         background-color: rgba(95, 146, 48, 1);
         background-image : url('{% static '/images/fd_couleur.png' %}');
